Ana sayfa geliştirmesi V2

--- a/MemleketProjesi/mainpage.html
+++ b/MemleketProjesi/mainpage.html
@@ -9,14 +9,32 @@
         <title>Memleketim Sakarya</title>
         <table border="1"; style="width:100%";>
         <tr>
-            <td width="80px;" style="text-align: center;"><img src="settingsImage.png" alt="Ayarlar" width="50%;"></td>
-            <td style="text-align: center;">ANA SAYFA</td>
-            <td width="120px;" style="text-align: center;"><a href="logInpage.html" style="text-decoration: none;">Giriş yap</a></td>
-            <td width="120px;" style="text-align: center;"><a href="signInpage.html" style="text-decoration: none;">Kaydol</a></td>
+            <td width="120px;"style="text-align: center;"><img src="settingsImage.png" alt="Ayarlar" width="50%;"></td>
+            <td style="text-align: center;"><h1 style="font-family: 'Courier New', Courier, monospace;">ANA SAYFA</h1></td>
+            <td width="120px;" style="text-align: center;"><a href="logInpage.html"
+                style="font-family: cursive;" style="text-decoration: none;">Giriş yap</a></td>
+            <td width="120px;" style="text-align: center;"><a href="signInpage.html"
+                style="font-family: cursive;" style="text-decoration: none;">Kaydol</a></td>
         </tr>
-        <tr>
-            <td style="text-align: center;"></td>
+        <tr height="60px">
+            <td style="text-align: center;"><a href="images.html" style="text-decoration: none;">Görseller</a></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
-    </table>
-</body>
+        <tr height="60px">
+            <td style="text-align: center;"><a href="support.html" style="text-decoration: none;">Destek</a></td>
+            <td rowspan="2";><h2 style="padding-left: 20%;">Hakkımda</h2> <br> <p style="padding-left: 15%;">
+                Merhabalar, benim adım Kadir Tuna YİĞİT. Sakarya Üniversitesi Bilgisayar Mühendisliğinde okuyorum.
+                2003 doğumluyum. Sakarya'da yaşıyorum. Sizlere annemin memleketi olan ve benim de şuan ikamet ettiğim 
+                Sakarya'yı anlatacağım.</p></td>
+            <td></td>
+            <td></td>
+            <tr><td></td>
+            <td></td>
+        <td></td></tr>
+        </tr>
+        <tr></tr>
+        </table>
+    </body>
 </html>
