--- a/MemleketProjesi/mainpage.html
+++ b/MemleketProjesi/mainpage.html
@@ -27,14 +27,14 @@
             <td rowspan="2";><h2 style="padding-left: 20%;">Hakkımda</h2> <br> <p style="padding-left: 15%;">
                 Merhabalar, benim adım Kadir Tuna YİĞİT. Sakarya Üniversitesi Bilgisayar Mühendisliğinde okuyorum.
                 2003 doğumluyum. Sakarya'da yaşıyorum. Sizlere annemin memleketi olan ve benim de şuan ikamet ettiğim 
-                Sakarya'yı anlatacağım.</p></td>
+                Sakarya'yı anlatacağım.12222</p></td>
             <td></td>
             <td></td>
+        </tr>
             <tr><td></td>
             <td></td>
         <td></td></tr>
-        </tr>
-        <tr></tr>
+        
         </table>
     </body>
 </html>
