Gece olsa bile çalışmaya devam!

--- a/MemleketProjesi/mainpage.html
+++ b/MemleketProjesi/mainpage.html
@@ -24,17 +24,35 @@
         </tr>
         <tr height="60px">
             <td style="text-align: center;"><a href="support.html" style="text-decoration: none;">Destek</a></td>
-            <td rowspan="2";><h2 style="padding-left: 20%;">Hakkımda</h2> <br> <p style="padding-left: 15%;">
+            <td rowspan="2";><h3 style="padding-left: 20%;">Hakkımda</h3> <p style="padding-left: 15%;">
                 Merhabalar, benim adım Kadir Tuna YİĞİT. Sakarya Üniversitesi Bilgisayar Mühendisliğinde okuyorum.
-                2003 doğumluyum. Sakarya'da yaşıyorum. Sizlere annemin memleketi olan ve benim de şuan ikamet ettiğim 
-                Sakarya'yı anlatacağım.12222</p></td>
+                2003 doğumluyum. Sizlere annemin memleketi olan ve benim de şuan ikamet ettiğim 
+                Sakarya'yı anlatacağım.</p></td>
             <td></td>
             <td></td>
         </tr>
-            <tr><td></td>
+        <tr>
             <td></td>
-        <td></td></tr>
-        
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><p style="padding-left: 15%;">Sakarya büyükşehir olmasına rağmen şahsen çok gelişmiş bir yer değildir.
+                Tabi ki bunun getirdiği zararlar olduğu gibi faydaları da var. Temiz hava, nispeten hızlı bir trafik, organik yaşam gibi...
+                Zararları ise sosyal alanların ve aktivitelerin azınlıkta olması; mesela birkaç sene önce gokarta binmek istemiştim ve burada bulamamıştım.
+                Gerçi geçen bir haberde Sakarya'da da bir tane açıldığını duydum. Benle gelmek isteyen olursa gidebiliriz belki ☻.
+                Her ne kadar burayı sevsem de benim de şikayetlerim var tabi. Mesela kötü koku; özellikle Yazlık kavşağında ve benim evime yakın olan bir alanda.
+                Evim valiliğin birkaç yüz metre ilerisinde olmasına rağmen maalesef bir altyapı yok.
+                Her ne kadar yeni bir yerleşim yeri gibi olsa da 3 yıldır burada oturmaktayım ve internet sorunu yaşıyoruz.
+                Oturduğum yerde birçok başıboş köpek var ve bu bazı insanları tedirgin edebiliyor. Köpeğim olduğu için pek korktuğum söylenemez.
+                Ancak en azından bu köpeklerin kısırlaştırılması gerekiyor ki istila devam etmesin. </p> 
+                <p style="padding-left: 15%;">Farkettim ki biraz fazla olumsuzlardan bahsetmişim ☻. Ama dediğim gibi ben bu şehri seviyorum.
+                Şimdi biraz da gezilebilecek, arkadaşlar ve ailelerle beraber gidilebilecek yerlere göz atalım.</p>
+            </td>
+            <td></td>
+            <td></td>
+        </tr>
         </table>
     </body>
 </html>
