--- a/MemleketProjesi/cv.html
+++ b/MemleketProjesi/cv.html
@@ -2,46 +2,47 @@
 <html>
 <head>
     <meta charset="utf-8";>
-    <style>
-        .centerPha {
-            background-color: aqua;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<style>
+    li a
+    {
+        display: block;
+        width: 120px;
+        background-color: aqua;
+        text-decoration-line: none;
+        height: 120px;
+        text-align: center;
+    }
+</style>
+
 <body>
-    <header >
-        <tr>
-            <th><p class="centerPha" style="text-align: center;">Kadir Tuna Yiğit CV</p></th>
-        </tr>
-        
-    </header>
+    <table border="1";>
 
-    <nav>
-        <tr>
-            <th>İlkokul</th>
-            <th>Ortaokul</th>
-            <th>Lise</th>
-            <th>Üniversite</th>
-        </tr>
-    </nav>
+        <div class="float-container" style="width: auto;">
+            <header>
+                <div class="divCvHeader" style="float: right;" id="header"><b>Kadir Tuna YİĞİT<br> CV</b></div>
+            </header>
+    
+            <nav>
+                <div class="divNav">
+                    <br>
+                    <a href="" style="text-decoration: none;"><h4>Hakkımda</h4></a>
+                    <br>
+                    <a href="" style="text-decoration: none;"><h4>CV</h4></a>
+                    <br>
+                    <a href="" style="text-decoration: none;"><h4>Şehrim</h4></a>
+                    <br>
+                    <a href="" style="text-decoration: none;"><h4>Destek</h4></a>
+                </div>
+            </nav>
+        </div>
+    </table>
 
-    <section>
-        <tr>
-            <h3 style="margin-left: 25%;">Okuduğum okullar:</h3>
-
-        </tr>
-    </section>
-
-    <article>
-        <tr>
-            <p style="padding-left: 20%;">İlkokulda OsmanGazi İlköğretim Okulunda okudum.</p>
-        </tr>
-    </article>
-    <footer>
-        <a href="mainpage.html"><input type="submit" value="Geri dön"></a>
-    </footer>
-
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/mySheet.css">
 </body>
 
 </html>
