destek ve şehrim sayfa geliştirmesi

--- a/MemleketProjesi/cv.html
+++ b/MemleketProjesi/cv.html
@@ -16,7 +16,7 @@
 
         <nav style="background-color: black; padding:20px 0;">
             <div id="pages" class="navFirstDiv">
-                <a href="mainpage.html" class="navLeft">Hakkımda</a>
+                <a href="index.html" class="navLeft">Hakkımda</a>
                 <a href="myCity.html" class="navLeft">Şehrim</a>
                 <a href="#" class="navLeft">CV</a>
                 <a href="support.html" class="navLeft">Destek</a>
@@ -80,7 +80,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/mySheet.css">
-  <script src="javascript/text" href="js/bootstrap.min.js"></script>
+  <script type="javascript/text" src="js/bootstrap.min.js"></script>
 </body>
 
 <script>
