--- a/MemleketProjesi/logInpage.html
+++ b/MemleketProjesi/logInpage.html
@@ -31,14 +31,16 @@
                 
             </form>
             
-            <form action="mainpage.html">
+            <form action="index.html">
                 <input type="submit" name="submit" id="submit" value="Ana sayfaya geri dön">
             </form>
         </div>
     </div>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="javascript/text" href="js/bootstrap.min.js"></script>
+    <script type="javascript/text" src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/mySheet.css">
 </body>
+
+<script></script>
 </html>
