--- a/MemleketProjesi/index.html
+++ b/MemleketProjesi/index.html
@@ -20,6 +20,7 @@
                 <a href="myCity.html" class="navLeft">Şehrim</a>
                 <a href="cv.html" class="navLeft">CV</a>
                 <a href="support.html" class="navLeft">Destek</a>
+                <a href="interest.html" class="navLeft">İlgi Alanlarım</a>
             </div>
             <div class="navSecondDiv">
                 <a href="logInpage.html" style=" text-decoration: none; color: aliceblue;">Giriş Yap</a>
