--- a/MemleketProjesi/logInpage.html
+++ b/MemleketProjesi/logInpage.html
@@ -8,7 +8,7 @@
     <div class="w-100 bg-warning h-100" style="padding: 20%;">
 
         <div class="container  form-logIn">
-            <form action="logInphp.php" method="post">
+            <form action="logIn.php" method="post">
                 <div class="mb-3">
                     <label for="username">Kullanıcı Adı: </label>
                     <input class="form-control" type="text" name="username" id="username" placeholder="Username" pattern=".{4,10}" aria-label="default input example" autofocus autocomplete="username" required>                
