--- a/MemleketProjesi/myCity.html
+++ b/MemleketProjesi/myCity.html
@@ -26,6 +26,7 @@
                     <a href="#" class="navLeft">Şehrim</a>
                     <a href="cv.html" class="navLeft">CV</a>
                     <a href="support.html" class="navLeft">Destek</a>
+                    <a href="interest.html" class="navLeft">İlgi Alanlarım</a>
                 </div>
                 <div class="navSecondDiv">
                     <a href="logInpage.html" style=" text-decoration: none; color: aliceblue;">Giriş Yap</a>
@@ -72,103 +73,171 @@
             Gezilmesi Gereken Yerler
         </section>
 
-        <article class="text-between">
-            <ul style="list-style-type: none; margin: 3% 10%; padding:0 1%;">
-                <div class="d-flex justify-content-around my-3">
-                    <li><a href="#depremKM" class="myCityList">Deprem Kültür Merkezi</a></li>
-                    <li><a href="#sakaryaPark" class="myCityList">Sakarya Park</a></li>
-                    <li><a href="#sakaryaOrmanPark" class="myCityList">Sakarya Orman Park</a></li>
-                </div>
-                <div class="d-flex justify-content-around my-3">
-                    <li><a href="#muze" class="myCityList">Sakarya Müzesi</a></li>
-                    <li><a href="#tabiatPark" class="myCityList">Sakarya İl Ormanı Tabiat Parkı</a></li>
-                    <li><a href="#poyrazlarGol" class="myCityList">Poyrazlar Gölü</a></li>
-                </div>
-                <div class="d-flex justify-content-around my-3">
-                    <li><a href="#sapancaGol" class="myCityList">Sapanca Gölü</a></li>
-                    <li><a href="#serdivanGolPark" class="myCityList">Serdivan Göl Park</a></li>
-                    <li><a href="#golya" class="myCityList">Gölya Tabiat Parkı</a></li>
-                </div>
-                <div class="d-flex justify-content-around my-3">
-                    <li><a href="#sehitlik" class="myCityList">Sakarya Şehitliği</a></li>
-                    <li><a href="#sakarbaba" class="myCityList">SakarBaba Türbesi </a></li>
-                    <li><a href="#tozluCami" class="myCityList">Tozlu Cami</a></li>
-                </div>
-            </ul>
-        </article>
-
-        <div class="d-flex mb-4" id="depremKM">
-            <img src="images/depremKM.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Deprem Kültür Merkezi
-            </div>
+    <div id="carouselExampleDark" class="carousel carousel-dark slide ">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6" aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="7" aria-label="Slide 8"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="8" aria-label="Slide 9"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="9" aria-label="Slide 10"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="10" aria-label="Slide 11"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="11" aria-label="Slide 12"></button>
         </div>
-        <div class="d-flex mb-4" id="sakaryaPark">
-            <img src="images/sakaryaPark.png" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Sakarya Park
+        <div class="carousel-inner">
+          <div class="carousel-item active item" data-bs-interval="10000" id="depremKM">
+            <a href="#link1"><img src="images/depremKM.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Deprem Kültür Merkezi</h1>
+              <p>17 Ağustos 1999 tarihinde yaşanan Marmara Depremi'nde hayatını kaybedenleri anmak, yaşananları anlatmak ve hatırlatmak amacıyla depremin Sakarya ilinde yaptırılmış müzedir.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="sakaryaOrmanPark">
-            <img src="images/ormanPark.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Sakarya Orman Park
+          </div>
+          <div class="carousel-item item" data-bs-interval="2000" id="sakaryaPark">
+            <a href="#link2"><img src="images/sakaryaPark.png" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Sakarya Park</h1>
+              <p>Aile ve çocuklarla gidilebilecek güzel bir yer.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="muze">
-            <img src="images/müze.jpeg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Sakarya Müzesi
+          </div>
+          <div class="carousel-item item" id="sakaryaOrmanPark">
+            <a href="#link3"><img src="images/ormanPark.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Sakarya Orman Park</h1>
+              <p>Yöresel lezzetlerin yeşillikler içinde servis edildiği, salaş atmosfere sahip rahat restoran.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="tabiatPark">
-            <img src="images/tabiatPark.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Sakarya İl Ormanı Tabiat Parkı
+          </div>
+          <div class="carousel-item item" id="muze">
+            <a href="#link4"><img src="images/müze.jpeg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha" style="color: rgb(59, 250, 69);">
+              <h1>Sakarya Müzesi</h1>
+              <p>Müze binası 1915 yılında Askerlik Şubesi Başkanı Binbaşı Baha Bey'in evi olarak inşa edilmiştir. 1922'de Mustafa Kemal annesi ile bu evde görüşüp, misafir olmuştur.
+                1983 yılında Kültür ve Turizm Bakanlığı tarafından satın alınmış ve 21 Haziran 1993 tarihinde müze olarak açılmıştır.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="poyrazlarGol">
-            <img src="images/poyrazlar.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Poyrazlar Gölü
+          </div>
+          <div class="carousel-item item" id="tabiatPark">
+            <a href="#link5"><img src="images/tabiatPark.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha" style="color: rgb(255, 78, 211);">
+              <h1>Sakarya İl Ormanı Tabiat Parkı</h1>
+              <p>Orman yolları, göl, okçuluk alanı, ahşap kulübeler ve restoran bulunan, koruma altına alınmış park.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="sapancaGol">
-            <img src="images/sapancagolu.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Sapanca Gölü
+          </div>
+          <div class="carousel-item item" id="poyrazlarGol">
+            <a href="#link6"><img src="images/poyrazlar.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Poyrazlar Gölü</h1>
+              <p>Poyrazlar gölü, Sakarya il merkezinin 7–8 km kuzeydoğusunda, Sakarya nehrinin kenarında yer alan alüvyal set gölüdür.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="serdivanGolPark">
-            <img src="images/serdivanGölPark.png" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Serdivan Göl Park
+          </div>
+          <div class="carousel-item item" id="sapancaGol">
+            <a href="#link7"><img src="images/sapancagolu.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Sapanca Gölü</h1>
+              <p>Sakarya il merkezinin 12 km batısında, İzmit ilçesinin ise 27 km doğusundaki tektonik kökenli bir tatlı su gölüdür.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="golya">
-            <img src="images/gölya.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Gölya Tabiat Parkı
+          </div>
+          <div class="carousel-item item" id="serdivanGolPark">
+            <a href="#link8"><img src="images/serdivanGölPark.png" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha" style="color: rgb(228, 255, 55);">
+              <h1>Serdivan Göl Park</h1>
+              <p>Yürüyüş yolları, kafe, piknik alanları ve güzel göl manzaraları sunan huzurlu park.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="sehitlik">
-            <img src="images/şehitlik.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Sakarya Şehitliği
+          </div>
+          <div class="carousel-item item" id="golya">
+            <a href="#link9"><img src="images/gölya.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha" style="color: rgb(15, 44, 188);">
+              <h1>Gölya Tabiat Parkı</h1>
+              <p>Bir çok alan bulunduran doğal bir alandır.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="sakarbaba">
-            <img src="images/sakarbaba.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası SakarBaba Türbesi
+          </div>
+          <div class="carousel-item item" id="sehitlik">
+            <a href="#link10"><img src="images/şehitlik.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Sakarya Şehitliği</h1>
+              <p>Merdivenli yolun sonunda, Türk Ordusu’nun kazandığı zaferin öyküsünü dile getiren kabartmalar ve müze yer almaktadır.
+                 Müzede; Sakarya Meydan Savaşı'na ait belgeler ve çeşitli fotoğraflar sergilenmektedir.</p>
             </div>
-        </div>
-        <div class="d-flex mb-4" id="tozluCami">
-            <img src="images/tozluCami.jpg" alt="" style="height: 400px; width: auto;">
-            <div style="margin-top: 200px; margin-left: 2%;">
-                Burası Tozlu Cami
+          </div>
+          <div class="carousel-item item" id="sakarbaba">
+            <a href="#link11"><img src="images/sakarbaba.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha text-white">
+              <h1>Sakarbaba Türbesi</h1>
+              <p>Parası olmadığından nehirden geçemeyen bir ermiş dua edip nehrin yatağını değiştirtmiş. Bu söylenile gelen kimsenin yattığı yer olarak düşünülen türbe.</p>
             </div>
+          </div>
+          <div class="carousel-item item" id="tozluCami">
+            <a href="#link12"><img src="images/tozluCami.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block sliderPha" style="color: rgb(86, 212, 170);">
+              <h1>Tozlu Cami</h1>
+              <p>99 depreminde yıkıldıktan sonra yeniden yapılmıştır.</p>
+            </div>
+          </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    
+    <div id="link1" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Deprem Kültür Merkezi</h1>
+        <p style="color: aliceblue;">17 Ağustos 1999 tarihinde yaşanan Marmara Depremi'nde hayatını kaybedenleri anmak,
+        yaşananları anlatmak ve hatırlatmak amacıyla depremin Sakarya ilinde yaptırılmış müzedir.</p>
+    </div>
+    <div id="link2" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sakarya Park</h1>
+        <p style="color: aliceblue;">Aile ve çocuklarla gidilebilecek güzel bir yer.</p>
+    </div>
+    <div id="link3" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sakarya Orman Park</h1>
+        <p style="color: aliceblue;">Yöresel lezzetlerin yeşillikler içinde servis edildiği, salaş atmosfere sahip rahat restoran.</p>
+    </div>
+    <div id="link4" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sakarya Müzesi</h1>
+        <p style="color: aliceblue;">Müze binası 1915 yılında Askerlik Şubesi Başkanı Binbaşı Baha Bey'in evi olarak inşa edilmiştir. 1922'de Mustafa Kemal annesi ile bu evde görüşüp, misafir olmuştur.
+        1983 yılında Kültür ve Turizm Bakanlığı tarafından satın alınmış ve 21 Haziran 1993 tarihinde müze olarak açılmıştır.</p>
+    </div>
+    <div id="link5" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sakarya İl Ormanı Tabiat Parkı</h1>
+        <p style="color: aliceblue;">Orman yolları, göl, okçuluk alanı, ahşap kulübeler ve restoran bulunan, koruma altına alınmış park.</p>
+    </div>
+    <div id="link6" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Poyrazlar Gölü</h1>
+        <p style="color: aliceblue;">Poyrazlar gölü, Sakarya il merkezinin 7–8 km kuzeydoğusunda, Sakarya nehrinin kenarında yer alan alüvyal set gölüdür.</p>
+    </div>
+    <div id="link7" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sapanca Gölü</h1>
+        <p style="color: aliceblue;">Sakarya il merkezinin 12 km batısında, İzmit ilçesinin ise 27 km doğusundaki tektonik kökenli bir tatlı su gölüdür.</p>
+    </div>
+    <div id="link8" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Serdivan Göl Park</h1>
+        <p style="color: aliceblue;">Yürüyüş yolları, kafe, piknik alanları ve güzel göl manzaraları sunan huzurlu park.</p>
+    </div>
+    <div id="link9" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Gölya Tabiat Parkı</h1>
+        <p style="color: aliceblue;">Bir çok alan bulunduran doğal bir alandır.</p>
+    </div>
+    <div id="link10" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sakarya Şehitliği</h1>
+        <p style="color: aliceblue;">Merdivenli yolun sonunda, Türk Ordusu’nun kazandığı zaferin öyküsünü dile getiren kabartmalar ve müze yer almaktadır.
+        Müzede; Sakarya Meydan Savaşı'na ait belgeler ve çeşitli fotoğraflar sergilenmektedir.</p>
+    </div>
+    <div id="link11" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Sakarbaba Türbesi</h1>
+        <p style="color: aliceblue;">Parası olmadığından nehirden geçemeyen bir ermiş dua edip nehrin yatağını değiştirtmiş.
+        Bu söylenile gelen kimsenin yattığı yer olarak düşünülen türbe.</p>
+    </div>
+    <div id="link12" class="text-center my-5" style="padding: 0% 5%;">
+        <h1>Tozlu Cami</h1>
+        <p style="color: aliceblue;">99 depreminde yıkıldıktan sonra yeniden yapılmıştır.</p>
     </div>
     
     <link rel="stylesheet" href="css/mySheet.css">
