--- a/MemleketProjesi/support.html
+++ b/MemleketProjesi/support.html
@@ -98,7 +98,7 @@
 	  var regex = /^[a-zA-Z0-9._-]+@([a-zA-Z0-9.-]+.)+([.])+[a-zA-Z0-9.-]{2,4}$/;
 	  if (regex.test(mail)==false)
 	  {
-      alert("Hata geçersiz mail adresi girdiniz!");
+      alert("Geçersiz bir email adresi girdiniz.");
       document.getElementById("email").value = '';
     }
     else
